# TArobbe

./: CMakeLists.txt  DFA.cpp  DFA.h  DFA_Transition.cpp  DFA_Transition.h  Failtest.json  NFA.cpp  NFA.h  NFA.json  NFA_Transition.cpp  NFA_Transition.h  State.cpp  State.h  Test1.json  Transition.cpp  Transition.h  dfa.dt  main.cpp  test2.json
